--- a/styles/darkStyle.css
+++ b/styles/darkStyle.css
@@ -14,6 +14,10 @@ nav.footer{
 a.headerText{
     font-size: 26px;
 }
+
+div.wrapper{
+    overflow: hidden;
+}
 div.left{
     float: left;
     text-align: center;
@@ -25,7 +29,8 @@ div.right{
 }
 b{
     font-family: "Javanese Text";
-    color: #565759;
+    color: white;
+    opacity: .4;
 }
 h1,img,h2,h3,h4,h5,label{
     text-align: center;
@@ -46,6 +51,13 @@ a{
     font-family: "Javanese Text"
 }
 
+.card-header{
+    background-color: #53565b;
+}
+
+.card-body{
+    background-color: #343a40;
+}
 
 .carouselText{
     color:whitesmoke;
