--- a/styles/darkStyle.css
+++ b/styles/darkStyle.css
@@ -65,6 +65,15 @@ a{
     color:whitesmoke;
     background-color: black;
     opacity:0.7;
+    font-size: 50px;
+}
+
+
+.carouselDescription{
+    color:whitesmoke;
+    background-color: black;
+    opacity:0.7;
+    font-size: 30px;
 }
 
 .icon{
