--- a/styles/normalStyle.css
+++ b/styles/normalStyle.css
@@ -45,6 +45,14 @@ div.right{
     color:black;
     background-color: whitesmoke;
     opacity:0.7;
+    font-size: 50px;
+}
+
+.carouselDescription{
+    color:black;
+    background-color: whitesmoke;
+    opacity:0.7;
+    font-size: 30px;
 }
 
 .off{
