--- a/styles/darkStyle.css
+++ b/styles/darkStyle.css
@@ -1,8 +1,4 @@
-.carouselImage{
-    position: relative;
-    float: center;
-    height: 600px;
-}
+
 
 nav{
     background-color: #000b20;
@@ -29,16 +25,26 @@ div.right{
     text-align: center;
     margin-right: 5%
 }
+
 b{
     font-family: "Javanese Text";
     color: white;
     opacity: .4;
 }
-h1,img,h2,h3,h4,h5,label{
+
+img,h2,h3,h4,h5,label{
     text-align: center;
     color: white;
     font-family: "Javanese Text";
 }
+
+h1{
+    font-size: 60px;
+    font-family: "Javanese Text";
+    text-align: left;
+    color: white;
+}
+
 p{
     color: white;
     font-family: "Javanese Text";
@@ -64,10 +70,15 @@ a{
 .carouselText{
     color:whitesmoke;
     background-color: black;
+    text-align: center;
     opacity:0.7;
     font-size: 50px;
 }
 
+.carouselImage{
+    position: relative;
+    height: 600px;
+}
 
 .carouselDescription{
     color:whitesmoke;
